RESOLVED FIXED164591
[Linux] Memory process values shown by the WebMemorySampler in linux are wrong
https://bugs.webkit.org/show_bug.cgi?id=164591
Summary [Linux] Memory process values shown by the WebMemorySampler in linux are wrong
Carlos Garcia Campos
Reported 2016-11-10 07:38:24 PST
It's parsing /proc/self/statm, and returning the values as if they were bytes, but they are number of pages, so to get the bytes we need to take the page size into account. In r208534 I added a method to get /proc/self/statm values in bytes to Platform layer, so we can simply use that instead.
Attachments
Patch (5.07 KB, patch)
2016-11-10 07:41 PST, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2016-11-10 07:41:55 PST
Carlos Garcia Campos
Comment 2 2016-11-10 08:07:06 PST
Note You need to log in before you can comment on or make changes to this bug.